# AB_Show_Text_2026

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  NDI_IMPLEMENTATION_SUMMARY.md  NDI_SETUP.md  NDI_VISUAL_GUIDE.md  QUICKSTART_NDI.md  README.md
fonts/: README.md
scripts/: run_system.sh  setup_deps.sh  test_system.sh
src/common/: AeronConnection.cpp  AeronConnection.h  HealthMonitor.cpp  HealthMonitor.h  TextMessage.cpp  TextMessage.h
src/network/: NetworkAdapter.cpp  NetworkAdapter.h  UdpNetworkLayer.cpp  UdpNetworkLayer.h
src/receiver/: ReceiverApp.cpp  ReceiverApp.h  SpoutSender.cpp  SpoutSender.h  SyphonSender.h  SyphonSender.mm  TextRenderer.cpp  TextRenderer.h  TextureSender.cpp  TextureSender.h  main.cpp
src/sender/: NDIReceiver.cpp  NDIReceiver.h  SenderApp.cpp  SenderApp.h  TextMemory.cpp  TextMemory.h  main.cpp
src/testing/: AeronStub.cpp
